2013-09-03  Matteo Cacciari <cacciari@lpthe.jussieu.fr>

	* contribs.svn:
	switched SubjetCounting to version 1.0.1

	* NEWS:
	released fjcontrib 1.007 with new contrib SubjetCounting 1.0.1
        and bugfix for exclusion and inclusion of more than one contrib


2013-09-03  Matteo Cacciari <cacciari@lpthe.jussieu.fr>

	* VERSION:
	* NEWS:
	released fjcontrib 1.007 with new contrib SubjetCounting 1.0.0
        and bugfix for exclusion and inclusion of more than one contrib
        (not actually released as a tarball, see entry above)        

	* contribs.svn:
	added SubjetCounting 1.0.0

2013-08-28  Matteo Cacciari <cacciari@lpthe.jussieu.fr>

        * configure
          fixed two bugs that were preventing specifying more than
          one contrib with the --only and --exclude options. The issues
          were a spurious "/" appearing in the replacement of commas with
          blanks in the contribs list, and a non-escaped command-line
          passed through sed when writing out the Makefile.

2013-08-27  Gregory Soyez  <soyez@fastjet.fr>

	* VERSION:
	* NEWS:
	released fjcontrib 1.006 including Nsubjettiness 1.0.3

	* contribs.svn:
	switched NSubjetiness to version 1.0.3

2013-08-13  Gavin Salam  <gavin.salam@cern.ch>

	* configure: 
	identification of svn info fixed to work also with svn 1.8 (that
	version prints an absolute and relative URL, and configure was
	picking up both; now it picks up just the absolute URL).

	* scripts/internal/release-fjcontrib.sh:
	hopefully fixed bug where tagging comment didn't have version
	number (but '$version')

2013-07-24  Gavin Salam  <gavin.salam@cern.ch>

	* DEVEL-GUIDELINES: 
	mentioned that authors can ask for input from fjcontrib
	maintainers before making a release

2013-06-04  Gavin Salam  <gavin.salam@cern.ch>

	* configure:
	improved error message when fastjet-config not found

2013-06-04  Gavin Salam  <gavin.salam@cern.ch>

	* NEWS: 
	* VERSION: 
	released version 1.005, which adds ScJet 1.1.0
